--- a/Essays/欧洲流氓.md
+++ b/Essays/欧洲流氓.md
@@ -4,7 +4,7 @@
 
 Germany and Sweden stand in the Hall of Shame in the European Union. [Homeschooling](https://supermemo.guru/wiki/Homeschooling) is banned in those countries. The best forms of learning for kids are illegal. Horror stories of home invasion by social workers and police are numerous. It would be enough to peek at Finland were excellent school system results in very low interest in homeschooling despite excellent stance on freedom. The ban will be overturned with a cultural shift towards understanding the science of learning. Before that happens, many kids will be denied their best options for growth.
 
-德国和瑞典站在欧盟的耻辱厅里。[家庭教育](https://supermemo.guru/wiki/Homeschooling)在这些国家被禁止。对孩子来说最好的学习形式是非法的。关于社会工作者和警察入侵家庭的恐怖故事不胜枚举。只要看看芬兰就够了，尽管芬兰的学校制度很好，但对家庭教育的兴趣却很低。随着文化的转变，对学习科学的理解，这一禁令将被推翻。在这之前，许多孩子将被剥夺他们成长的最佳选择。
+德国和瑞典站在欧盟的耻辱厅里。[在家上学](https://supermemo.guru/wiki/Homeschooling)在这些国家被禁止。对孩子而言最好的学习形式竟是非法的。关于社会工作者和警察入侵家庭的恐怖故事不胜枚举。只要看看芬兰就够了，尽管芬兰的学校制度很好，但对在家上学的兴趣却很低。随着文化的转变，对学习科学的理解，这一禁令将被推翻。在这之前，许多孩子将被剥夺他们成长的最佳选择。
 
 Words from [Berlin Declaration (2012)](https://ghex.world/advocacy/declarations/berlin-declaration/) fit the context:
 
@@ -12,17 +12,17 @@ Words from [Berlin Declaration (2012)](https://ghex.world/advocacy/declarations/
 
 > We condemn the policies of those nations that prohibit the practice of home education and permit the persecution of home educating families through excessive or coercive fines, threats to parental custody and application of criminal sanctions
 >
-> 我们谴责那些禁止家庭教育和允许通过过度或强制性的罚款、威胁父母监护权和实施刑事制裁来迫害家庭教育家庭的国家的政策。
+> 我们谴责那些禁止在家上学和允许通过过度或强制性的罚款、威胁父母监护权和实施刑事制裁来迫害在家上学家庭的国家的政策。
 
 As for Finland, I wonder if their school systems isn't crafted to produce meek and obedient population (see: [Finnish school paradox](https://supermemo.guru/wiki/Finnish_school_paradox)). A red flag indicator is the fact that Finland still disrupts young lives with [conscription](https://supermemo.guru/wiki/Conscription). When a citizen's initiative to abolish the concept in 2013 failed to receive sufficient support, I wondered if there aren't enough angry young man in Finland to change the status quo? Perhaps all that healthy anger is gradually extinguished by schooling? Is if fair that Bill Gates could devote all his youth to Microsoft while Linus Torvalds had to waste 11 months for the military service? Those 11 months might have changed history. Polish army tried to grab my neck in the year preceding [SuperMemo](https://supermemo.guru/wiki/SuperMemo). If they succeeded, emergence of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) apps after 1987 would be down to a lottery ticket.
 
-至于芬兰，我想知道他们的学校系统是不是为了培养温顺和顺从的人口（见：[芬兰学校悖论](https://supermemo.guru/wiki/Finnish_school_paradox)）。一个红旗标志是，芬兰仍然用[征兵](https://supermemo.guru/wiki/Conscription)来扰乱年轻人的生活。当2013年一项关于废除这一概念的公民倡议未能得到足够的支持时，我想知道在芬兰是否没有足够的愤怒的年轻人来改变现状？也许所有这些健康的愤怒都被学校教育逐渐熄灭了？比尔-盖茨可以把所有的青春都献给微软，而莱纳斯-托瓦尔兹却不得不为服兵役浪费 11 个月，这公平吗？这 11 个月可能改变了历史。在[SuperMemo](https://supermemo.guru/wiki/SuperMemo)的前一年，波兰军队试图抓住我的脖子。如果他们成功了，1987 年以后出现的[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)应用程序将沦为一张彩票。
+至于芬兰，我想知道他们的学校系统是不是为了培养温顺和顺从的人口（见：[芬兰学校悖论](https://supermemo.guru/wiki/Finnish_school_paradox)）。一个红旗标志是，芬兰仍然用[征兵](https://supermemo.guru/wiki/Conscription)来扰乱年轻人的生活。当 2013 年一项关于废除这一概念的公民倡议未能得到足够的支持时，我想知道在芬兰是否没有足够的愤怒的年轻人来改变现状？也许所有这些健康的愤怒都被学校教育逐渐熄灭了？比尔-盖茨可以把所有的青春都献给微软，而莱纳斯-托瓦尔兹却不得不为服兵役浪费 11 个月，这公平吗？这 11 个月可能改变了历史。在 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的前一年，波兰军队试图抓住我的脖子。如果他们成功了，1987 年以后出现的[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)应用程序将沦为一张彩票。
 
-## Who wants to ban homeschooling? 谁想禁止家庭教育？
+## Who wants to ban homeschooling? 谁想禁止在家上学？
 
 In reference to home education, there is some meeting of mind between socialists, progressives, atheists, multiculturalists, feminists, Swedish culture, and German culture. Feminists use schooling to free women. Atheists hope to kill religions. Egalitarians and socialists hope to educate kids "equally". Swedes love the social function of schools. Germans are fond of [ordnung](https://en.wiktionary.org/wiki/Ordnung) and Prussian discipline.
 
-在提到家庭教育时，社会主义者、进步人士、无神论者、多元文化主义者、女权主义者、瑞典文化和德国文化之间有一些思想上的碰撞。女权主义者利用学校教育来解放妇女。无神论者希望能杀死宗教。平等主义者和社会主义者希望能 "平等 "地教育孩子。瑞典人喜欢学校的社会功能。德国人喜欢[ordnung](https://en.wiktionary.org/wiki/Ordnung)和普鲁士式的纪律。
+在提到在家上学时，社会主义者、进步人士、无神论者、多元文化主义者、女权主义者、瑞典文化和德国文化之间有一些思想上的碰撞。女权主义者利用学校教育来解放妇女。无神论者希望能杀死宗教。平等主义者和社会主义者希望能 "平等" 地教育孩子。瑞典人喜欢学校的社会功能。德国人喜欢[ordnung](https://en.wiktionary.org/wiki/Ordnung)和普鲁士式的纪律。
 
 Legal regulations in education are an expression of the wish to control other people's minds
 
@@ -30,27 +30,27 @@ Legal regulations in education are an expression of the wish to control other pe
 
 For an example of an appetite for legal control see: [Presumptive ban on homeschooling in the USA (Elizabeth Bartholet)](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
 
-对法律控制的胃口的例子见：[美国对家庭教育的推定禁令（Elizabeth Bartholet）](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
+对法律控制的胃口的例子见：[美国对在家上学的推定禁令（Elizabeth Bartholet）](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
 
 ## Common denominators 共同点
 
 Both countries were pretty welcoming in the wave of immigration. However, their good hearts turned cold when it comes to upbringing. A non-Christian or non-European parent has little choice but to send her children early to daycare to begin the process of "integration" and "socialization". This has all the appearances of a warm welcome for labor and young blood while still being closed to foreign cultural influences.
 
-在移民浪潮中，这两个国家都相当欢迎。然而，当涉及到教养问题时，他们的好心就变冷了。非基督徒或非欧洲人的父母没有什么选择，只能早早地把孩子送到日托所，开始 "融合 "和 "社会化 "的过程。这在表面上看是对劳动力和年轻血液的热烈欢迎，但对外国文化的影响仍然是封闭的。
+在移民浪潮中，这两个国家都相当欢迎。然而，当涉及到教养问题时，他们的好心就变冷了。非基督徒或非欧洲人的父母没有什么选择，只能早早地把孩子送到日托所，开始 "融合" 和 "社会化" 的过程。这在表面上看是对劳动力和年轻血液的热烈欢迎，但对外国文化的影响仍然是封闭的。
 
 Those countries provide an excellent illustration of [self-perpetuating cultural feedback loop of schooling](https://supermemo.guru/wiki/Phone_book). [Compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) makes it hard to see the benefits of [free learning](https://supermemo.guru/wiki/Free_learning). Society believes that *"school is good"* and that more school is better. This provides a rich feeding ground for educational mythology such as [Digital Dementia](https://supermemo.guru/wiki/Digital_Dementia). An average German kid speaks poor English and has little idea of concepts such as [homeschooling](https://supermemo.guru/wiki/Homeschooling), let alone [unschooling](https://supermemo.guru/wiki/Unschooling) or [democratic schools](https://supermemo.guru/wiki/Democratic_school). An average German or Swedish citizen is pretty convinced that school is necessary due to the myth of the value of school socialization.
 
-这些国家为[学校教育的自我文化反馈循环](https://supermemo.guru/wiki/Phone_book)提供了一个很好的说明。[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)使得人们很难看到[自由学习](https://supermemo.guru/wiki/Free_learning)的好处。社会认为，*"学校是好的 "*，更多的学校是更好的。这为[数字痴呆症](https://supermemo.guru/wiki/Digital_Dementia)等教育神话提供了丰富的素材。一个普通的德国孩子英语很差，对[家庭教育](https://supermemo.guru/wiki/Homeschooling)等概念没有什么概念，更不用说[非学校教育](https://supermemo.guru/wiki/Unschooling)或[民主学校](https://supermemo.guru/wiki/Democratic_school)。一个普通的德国或瑞典公民非常相信，由于学校社会化的价值神话，学校是必要的。
+这些国家为[学校教育的自我文化反馈循环](https://supermemo.guru/wiki/Phone_book)提供了一个很好的说明。[强制教育](https://supermemo.guru/wiki/Compulsory_schooling)使得人们很难看到[自由学习](https://supermemo.guru/wiki/Free_learning)的好处。社会认为，*"学校是好的 "*，更多的学校是更好的。这为[数字痴呆症](https://supermemo.guru/wiki/Digital_Dementia)等教育神话提供了丰富的素材。一个普通的德国孩子英语很差，对[在家上学](https://supermemo.guru/wiki/Homeschooling)等概念没有什么概念，更不用说[非学校教育](https://supermemo.guru/wiki/Unschooling)或[民主学校](https://supermemo.guru/wiki/Democratic_school)。一个普通的德国或瑞典公民非常相信，由于学校社会化的价值神话，学校是必要的。
 
 ## Jan Björklund
 
 [Jan Björklund](https://en.wikipedia.org/wiki/Jan_Björklund) (b. April 1962) is the bogeyman behind the [ban on homeschooling](https://supermemo.guru/wiki/Ban_on_homeschooling) in Sweden. As Education Minister 2007-2014, he introduced wide-sweeping and controversial reforms. He blamed falling performance of Swedish students on Social Democrats. Despite being a leader of a party, which is liberal in name, Björklund has committed the most illiberal crime of education: he banned homeschooling.
 
-[Jan Björklund](https://en.wikipedia.org/wiki/Jan_Björklund)（1962年4月生）是瑞典[禁止家庭教育](https://supermemo.guru/wiki/Ban_on_homeschooling)的幕后黑手。作为 2007-2014 年的教育部长，他推行了广泛的、有争议的改革。他将瑞典学生的成绩下降归咎于社会民主党人。尽管比约克伦是一个名义上的自由主义政党的领导人，但他却犯下了教育领域最不自由的罪行：他禁止家庭教育。
+[Jan Björklund](https://en.wikipedia.org/wiki/Jan_Björklund)（1962 年 4 月生）是瑞典[禁止在家上学](https://supermemo.guru/wiki/Ban_on_homeschooling)的幕后黑手。作为 2007-2014 年的教育部长，他推行了广泛的、有争议的改革。他将瑞典学生的成绩下降归咎于社会民主党人。尽管比约克伦是一个名义上的自由主义政党的领导人，但他却犯下了教育领域最不自由的罪行：他禁止在家上学。
 
 The entire Björklund's own education took place in military institutions of learning. He advanced to the rank of major and knows about military matters infinitely more than he knows about education. Appropriately, as an expression of his authoritarian character, most of his ideas are disciplinarian in nature. New law makes it possible to confiscate child's cell phone. This reminds me how traumatic was the day when [my worst teacher](https://supermemo.guru/wiki/My_worst_teacher) confiscated my beloved zoo postcards. This is reminiscent of prisons, not schools. In Björklund's thinking, again, I hear echoes of the 1920s and 1930s, Prussian discipline, military service, homogeneous thinking, and conformity deprived of all signs of individual creativity. In a typical show of disciplinarian ignorance, Björklund compared [democratic schools](https://supermemo.guru/wiki/Democratic_school) to hospitals run by patients. Patients know a few things better than doctors: they can feel they own pain, they often know their disease history better, they know their habits and preferences, and, most of all, they usually care about their own health more than anyone else in the world. However, students have been equipped by evolution with the best learning guidance system: the [learn drive](https://supermemo.guru/wiki/Learn_drive) (see: [Optimality of the learn drive](https://supermemo.guru/wiki/Optimality_of_the_learn_drive). Students know far better, which portions of the learning material fit the [semantic structure](https://supermemo.guru/wiki/Semantic_network) of knowledge stored in their long-term memory. Teachers have no insight into individual brains and only comply with a schedule imposed by national [curricula](https://supermemo.guru/wiki/Curriculum). This model of learning fits perfectly into Björklund's militaristic view of what school should accomplish. When Sweden suffered the "[PISA](https://supermemo.guru/wiki/PISA) shock", Bjorklund would follow a typical military prescription: teacher authority, classroom discipline, more grading, earlier assessment. Björklund wanted to terminate the Swedish free school experiment by mass re-nationalization [[1\]](http://www.thelocal.se/20140210/sweden-failed-in-decentralizing-schools-report). If I wanted a new Napoleonic army for Sweden, I would choose Björklund to run the education system.
 
-比约克伦德自己的全部教育都是在军事学习机构中进行的。他升至少校军衔，对军事事务的了解远远超过对教育的了解。作为他专制性格的体现，他的大部分想法都具有纪律性，这是很恰当的。新法律规定可以没收孩子的手机。这让我想起了[我最差的老师](https://supermemo.guru/wiki/My_worst_teacher)没收我心爱的动物园明信片的那一天，是多么的伤感。这让人想起了监狱，而不是学校。在比约克伦的思维中，我再次听到了20世纪20年代和30年代的回声，普鲁士式的纪律、兵役、同质化的思维，以及被剥夺了所有个人创造力迹象的一致性。在一个典型的纪律性无知的表现中，比约克伦把[民主学校](https://supermemo.guru/wiki/Democratic_school)比作由病人管理的医院。病人比医生更了解一些事情：他们能感觉到自己的疼痛，他们往往更了解自己的疾病史，他们知道自己的习惯和喜好，最重要的是，他们通常比世界上任何其他人都更关心自己的健康。然而，学生在进化过程中配备了最好的学习指导系统：[学习驱动](https://supermemo.guru/wiki/Learn_drive)（见：[学习驱动的优化](https://supermemo.guru/wiki/Optimality_of_the_learn_drive)。学生更清楚，学习材料的哪些部分符合他们长期记忆中储存的知识的[语义结构](https://supermemo.guru/wiki/Semantic_network)。教师对个人的大脑没有洞察力，只能遵守国家[课程](https://supermemo.guru/wiki/Curriculum)规定的时间表。这种学习模式完全符合比约克伦德对学校应该完成的任务的军国主义观点。当瑞典遭受"[PISA](https://supermemo.guru/wiki/PISA)冲击 "时，比约克伦德会遵循一个典型的军事处方：教师权威、课堂纪律、更多评分、更早评估。比约克伦德想通过大规模的重新国有化来终止瑞典的自由学校实验[[1]](http://www.thelocal.se/20140210/sweden-failed-in-decentralizing-schools-report)。如果我想为瑞典建立一支新的拿破仑军队，我会选择比约克伦德来管理教育系统。
+比约克伦德自己的全部教育都是在军事学习机构中进行的。他升至少校军衔，对军事事务的了解远远超过对教育的了解。作为他专制性格的体现，他的大部分想法都具有纪律性，这是很恰当的。新法律规定可以没收孩子的手机。这让我想起了[我最差的老师](https://supermemo.guru/wiki/My_worst_teacher)没收我心爱的动物园明信片的那一天，是多么的伤感。这让人想起了监狱，而不是学校。在比约克伦的思维中，我再次听到了 20 世纪 20 年代和 30 年代的回声，普鲁士式的纪律、兵役、同质化的思维，以及被剥夺了所有个人创造力迹象的一致性。在一个典型的纪律性无知的表现中，比约克伦把[民主学校](https://supermemo.guru/wiki/Democratic_school)比作由病人管理的医院。病人比医生更了解一些事情：他们能感觉到自己的疼痛，他们往往更了解自己的疾病史，他们知道自己的习惯和喜好，最重要的是，他们通常比世界上任何其他人都更关心自己的健康。然而，学生在进化过程中配备了最好的学习指导系统：[学习内驱力](https://supermemo.guru/wiki/Learn_drive)（见：[学习内驱力的优化](https://supermemo.guru/wiki/Optimality_of_the_learn_drive)。学生更清楚，学习材料的哪些部分符合他们长期记忆中储存的知识的[语义结构](https://supermemo.guru/wiki/Semantic_network)。教师对个人的大脑没有洞察力，只能遵守国家[课程](https://supermemo.guru/wiki/Curriculum)规定的时间表。这种学习模式完全符合比约克伦德对学校应该完成的任务的军国主义观点。当瑞典遭受"[PISA](https://supermemo.guru/wiki/PISA)冲击 "时，比约克伦德会遵循一个典型的军事处方：教师权威、课堂纪律、更多评分、更早评估。比约克伦德想通过大规模的重新国有化来终止瑞典的自由学校实验[[1]](http://www.thelocal.se/20140210/sweden-failed-in-decentralizing-schools-report)。如果我想为瑞典建立一支新的拿破仑军队，我会选择比约克伦德来管理教育系统。
 
 When Björklund said school should add priority to history and religion, he again played a hand of God over child's mind. When it comes to religion, National Agency for Education would have all major religions treated equally. God Björklund said *"Christianity should receive higher priority"*. If the child wants to focus on biology, his history should be deferred to the time when his brain matures to understand its importance (as it was the very late case in my own life)(see: [Learning history](https://supermemo.guru/wiki/Learning_history)). If the kid shows no interest in religion, he should have an option to defer that subject as well. On the other hand, if someone comes to school with strong Christian, or perhaps Muslim convictions, he should also have an option of studying the area that keeps him passionate. One of interesting Björklund ideas is to introduce compulsory Chinese on the assumption China will soon be a dominant world power. Where Sweden got a lot of success in social engineering, Björklund's mind-engineering is a step too far. No ministry should ever rule over people's minds, and kids should be free from indoctrination most of all.
 
@@ -64,7 +64,7 @@ When Tobias Krantz left the post of Minister for Higher Education and Research i
 
 In October 2014, Green party's Gustav Fridolin, just 31-years-old took the post of the Minister of Education. Born in 1983, fluent in English, Fridolin believed reforms were urgent. However, when Anna Ekström (b. 1959) took over the post, things returned to the same old mode of reasoning ([source](https://www.tellerreport.com/news/2019-08-15---minister-of-education-anna-ekström-says-no-to-more-homeschooling-.ryVcojr7NB.html)):
 
-2014年10月，年仅31岁的绿党人古斯塔夫-弗里多林（Gustav Fridolin）担任了教育部长一职。弗里多林出生于1983年，能说流利的英语，他认为改革是迫切的。然而，当安娜-埃克斯特伦（Anna Ekström，1959年生）接任后，事情又回到了原来的推理模式（[来源](https://www.tellerreport.com/news/2019-08-15---minister-of-education-anna-ekström-says-no-to-more-homeschooling-.ryVcojr7NB.html)）：
+2014 年 10 月，年仅 31 岁的绿党人古斯塔夫-弗里多林（Gustav Fridolin）担任了教育部长一职。弗里多林出生于 1983 年，能说流利的英语，他认为改革是迫切的。然而，当安娜-埃克斯特伦（Anna Ekström，1959 年生）接任后，事情又回到了原来的推理模式（[来源](https://www.tellerreport.com/news/2019-08-15---minister-of-education-anna-ekström-says-no-to-more-homeschooling-.ryVcojr7NB.html)）：
 
 > In Sweden, the school law applies, and for Swedish children, the [curriculum](https://supermemo.guru/wiki/Curriculum) applies, and what is in the **curriculum is very important for children** and students to learn in order for them to **do well in life**
 >
@@ -72,11 +72,11 @@ In October 2014, Green party's Gustav Fridolin, just 31-years-old took the post 
 
 Like many before her, Ekström believes in the oxymoron of the right to [compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) ([source](https://www.denandraresan.com/the-history-of-school-in-sweden-and-the-situation-today/)):
 
-像她之前的许多人一样，埃克斯特罗姆相信[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)的权利是矛盾的（[来源](https://www.denandraresan.com/the-history-of-school-in-sweden-and-the-situation-today/)）:
+像她之前的许多人一样，埃克斯特罗姆相信[强制教育](https://supermemo.guru/wiki/Compulsory_schooling)的权利是矛盾的（[来源](https://www.denandraresan.com/the-history-of-school-in-sweden-and-the-situation-today/)）:
 
 > One of the reasons why we have **[compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling)** is that we **allow** the children’s **right** to education before the parents’ right to decide on their children
 >
-> 我们有**[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)**的原因之一是，我们**允许**儿童的**权利**在父母决定其子女的权利之前接受教育
+> 我们有**[强制教育](https://supermemo.guru/wiki/Compulsory_schooling)**的原因之一是，我们**允许**儿童的**权利**在父母决定其子女的权利之前接受教育
 
 Assuming the translations are correct, Anna Ekström seems to be [reading from the same old phone book](https://supermemo.guru/wiki/Phone_book). There is no room for deeper understanding of [high quality learning](https://supermemo.guru/wiki/Free_learning).
 
@@ -90,7 +90,7 @@ Recent coronavirus pandemic provides a fantastic research ground for those who s
 
 I like [David Katz](https://youtu.be/Lze-rMYLf2E)'s position on tackling the crisis. I came to the exact same conclusions when I was diverted by police from my usual jogging route in a scenic abandoned path via woods (Apr 9, 2020). In society's best interest I should catch the virus (assuming I would not die). Naturally, this would not happen in cold wind in empty woods, which was my best place to actually stay healthy.
 
-我喜欢[David Katz](https://youtu.be/Lze-rMYLf2E)关于解决危机的立场。当我被警察从我通常的慢跑路线上转移到一条风景优美的废弃小路，经过树林时，我得出了完全相同的结论（2020年4月9日）。为了社会的最佳利益，我应该感染病毒（假设我不会死）。自然，这不会发生在空旷的树林里的寒风中，而这是我真正保持健康的最佳场所。
+我喜欢 [David Katz](https://youtu.be/Lze-rMYLf2E) 关于解决危机的立场。当我被警察从我通常的慢跑路线上转移到一条风景优美的废弃小路，经过树林时，我得出了完全相同的结论（2020 年 4 月 9 日）。为了社会的最佳利益，我应该感染病毒（假设我不会死）。自然，这不会发生在空旷的树林里的寒风中，而这是我真正保持健康的最佳场所。
 
 I was pretty impressed that Sweden decided to take the boldest steps in Europe. If policies are determined by an epidemiologist, they are more likely to make sense than those set by politicians. However, Anders Tegnell made a comment that hinted at his "Swedish mindset": *"children must go to school so that nurses could go to work"*. Moreover, cruelly, elderly care centers contribute half of the death statistics. This reminds me the ominous words of late Raymond Moore: *"[the earlier you institutionalize your children, the earlier they will institutionalize you!](https://supermemo.guru/wiki/Raymond_Moore:_On_early_institutionalization)"*
 
@@ -121,7 +121,7 @@ The main forces that will overturn the present status quo are:
 
 - 年轻一代的心理健康下降
 - 创新能力的下降
-- 对[义务教育](https://supermemo.guru/wiki/Compulsory_schooling)的低效率有第一手认识的儿童的基层抗议(在格雷塔-唐伯格等人的帮助下)
+- 对[强制教育](https://supermemo.guru/wiki/Compulsory_schooling)的低效率有第一手认识的儿童的基层抗议(在格雷塔-唐伯格等人的帮助下)
 - 在线获取世界各地采用的开明的教育解决方案的知识。
 
 ## Further reading 进一步阅读
@@ -130,6 +130,6 @@ The main forces that will overturn the present status quo are:
 - [Elizabeth Bartholet: ignorant attack on homeschooling](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
 - [Homeschooling in Sweden](https://www.youtube.com/watch?v=p2YAD49NQ54) (6 min video)
 
-- [禁止家庭教育](https://supermemo.guru/wiki/Ban_on_homeschooling)
-- [Elizabeth Bartholet：对家庭教育的无知攻击](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
-- [瑞典的家庭教育](https://www.youtube.com/watch?v=p2YAD49NQ54) (6分钟视频)
+- [禁止在家上学](https://supermemo.guru/wiki/Ban_on_homeschooling)
+- [Elizabeth Bartholet：对在家上学的无知攻击](https://supermemo.guru/wiki/Elizabeth_Bartholet:_ignorant_attack_on_homeschooling)
+- [瑞典的在家上学](https://www.youtube.com/watch?v=p2YAD49NQ54) (6分钟视频)
