--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -65,7 +65,7 @@ But it’s not a conventional essay. Rather, *Quantum Country* is a prototype fo
 
 Unfortunately, those steps are poorly supported by existing media.[^5] Is it possible to design a new medium which much more actively supports memorization? That is, the medium would build in (and, ideally, make almost effortless) the key steps involved in memory. If we could do this, then instead of memory being a haphazard event, subject to chance, the mnemonic medium would make memory into a choice. Of course, on its own this wouldn’t make it trivial to learn subjects such as quantum mechanics and quantum computing – learning those subjects is about much more than memory. But it would help in addressing one core difficulty: the overwhelming number of new concepts and notation.
 
-不幸的是，现有媒介对这些步骤的支持很差。[^5]有没有可能设计一种新媒介，能够主动协助记忆? 也就是说，媒介中内建了记忆的关键步骤，而且做起来非常轻松。如果能够实现，那么我们眼中随机而充满不确定性的记忆，在助记媒介中将是可以选择的事情。当然，就其本身而言，这不会使学习量子力学和量子计算等学科变得简单——学习这些学科需要的远不止是记忆。但这种媒介将有助于解决一个核心障碍：令人窒息地多的新的概念和符号。
+不幸的是，现有媒介对这些步骤的支持很差。[^5]有没有可能设计一种新媒介，能够主动协助记忆? 也就是说，媒介中内建了记忆的关键步骤，而且做起来非常轻松。如果能够实现，那么我们眼中随机而充满不确定性的记忆，在助记媒介中将是可以选择的事情。当然，就其本身而言，这不会使学习量子力学和量子计算等学科变得简单——学习这些学科需要的远不止是记忆。但这种媒介将有助于解决一个核心障碍：全新概念和陌生符号多到令人窒息。
 
 In fact, there are many ways of redesigning the essay medium to do that. Before showing you our prototype, please pause for a moment and consider the following questions: how could you build a medium to better support a person’s memory of what they read? What interactions could easily and enjoyably help people consolidate memories? And, more broadly: is it possible to 2x what people remember? 10x? And would that make any long-term difference to their effectiveness?
 
@@ -115,17 +115,17 @@ This takes advantage of a fundamental fact about human memory: as we are repeate
 
 Although it’s early days for *Quantum Country* we can begin to see some of the impact of the mnemonic medium. Plotted below is the demonstrated retention of answers for each user, versus the number of times each question in the mnemonic essay has been reviewed:
 
-尽管量子国度尚处于早期阶段，但我们已经能看到一些助记媒介产生的影响。下图是助记文章中每个用户回答的实证保留与每个问题的复习次数的散点图：
+尽管量子国度尚处于早期阶段，但我们已经能看到一些助记媒介产生的影响。下图是助记文章中每个用户回答的证实保留与每个问题的复习次数的散点图：
 
 ![Graph depicting exponentially-rising demonstranted retention](https://numinous.productions/ttft/assets/dem_retention-2x.png)
 
 The graph takes a little unpacking to explain. By a card’s “demonstrated retention” we mean the maximum time between a successful review of that card, and the prior review of that card. A little more concretely, consider repetition number 6, say (on the horizontal axis). At the point, a user has reviewed all 112 questions in the essay 6 times. And the vertical axis shows the total demonstrated retention, summed across all cards, with each blue dot representing a single user who has reached repetition 6.
 
-这张图需要稍微解释一下。图中纵轴的卡片「证实保留天数」是指正确回答该问题与上一次回答该问题之间的最长时间。具体来说，考虑一下横轴上的数字 6。在这一点上的用户都已经复习了文章中所有的 112 张卡片 6 次。纵轴显示的是所有卡片的证实留存天数，每个蓝点代表一个复习了 6 次的用户。
+这张图需要稍微解释一下。图中纵轴的卡片「实证保留天数」是指正确回答该问题与上一次回答该问题之间的最长时间。具体来说，考虑一下横轴上的数字 6。在这一点上的用户都已经复习了文章中所有的 112 张卡片 6 次。纵轴显示的是所有卡片的证实留存天数，每个蓝点代表一个复习了 6 次的用户。
 
 So, for instance, after 6 repetitions, we see from the graph that most users are up around 6,000 days of demonstrated retention. That means an average of about 6,000 / 112 ~ 54 days per question in the essay. Intuitively, that seems pretty good – if you’re anything like us, a couple of months after reading something you have only a hazy memory. By contrast, these users have, at low time cost to themselves (of which more below), achieved nearly two months of demonstrated retention across 112 detailed questions.
 
-因此，举例来说，经过 6 次复习，大多数用户的总证实留存天数达到了 6000 天左右。也就是说，平均一下，文章中的每个问题都保留了  54 天。直观来看这个效果很好——如果你只是和大多数人一样，那么在读过一些东西之后的几个月，你只能留有一个模糊的记忆。相比之下，这些用户以较低的时间成本（详见下文），在 112 个细节性问题上实现了近两个月的已证实留存。
+因此，举例来说，经过 6 次复习，大多数用户的总实证留存天数达到了 6000 天左右。也就是说，平均一下，文章中的每个问题都保留了  54 天。直观来看这个效果很好——如果你只是和大多数人一样，那么在读过一些东西之后的几个月，你只能留有一个模糊的记忆。相比之下，这些用户以较低的时间成本（详见下文），在 112 个细节性问题上实现了近两个月的已证实留存。
 
 Furthermore, you can see the exponential rise in retention with the number of times cards have been reviewed. After the first review, users typically have an average of just over 2 days of demonstrated retention, per card[^7]. But by the sixth review that rises to an average of 54 days of demonstrated retention. That typically takes about 95 minutes of total review time to achieve. Given that the essay takes about 4 or so hours to read, this suggests that a less than 50% overhead in time commitment can provide many months or years of retention for almost all the important details in the essay.
 
