数字增加空格，一定提高改为可能提高，

--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -37,6 +37,7 @@ Let’s come back to that phrase from the opening, about changing “the thought
 The musician and comedian Martin Mull has observed that “writing about music is like dancing about architecture”. In a similar way, there’s an inherent inadequacy in writing about tools for thought. To the extent that such a tool succeeds, it expands your thinking beyond what can be achieved using existing tools, including writing. The more transformative the tool, the larger the gap that is opened. Conversely, the larger the gap, the more difficult the new tool is to evoke in writing. But what writing can do, and the reason we wrote this essay, is act as a bootstrap. It’s a way of identifying points of leverage that may help develop new tools for thought. So let’s get on with it.
 
 音乐家兼喜剧演员 Martin Mull 说过，「用文字描述音乐就像用舞蹈描述建筑」。同样地，对于描述思想工具，书写也存在先天不足。因为全新思想工具的成功，全然在于其开拓人的思想疆界的能力，大大超越现存工具，就比如超越写作。@f 新工具的变革性越强，与旧有工具开拓思想能力差距也越大。而其反作用就是，差距越大，这种新工具就越难用书写表达清楚。但是文字能够引导读者，这也是我们写这篇文章的原因。写作是确定杠杆点的一种方式，可能会有助于新思想工具的开发。所以让我们继续吧。[^Mass Point 2]
+
 # Part I: Memory systems
 
 # 第一部分：记忆系统
@@ -115,21 +116,21 @@ This takes advantage of a fundamental fact about human memory: as we are repeate
 
 Although it’s early days for *Quantum Country* we can begin to see some of the impact of the mnemonic medium. Plotted below is the demonstrated retention of answers for each user, versus the number of times each question in the mnemonic essay has been reviewed:
 
-尽管量子国度尚处于早期阶段，但我们已经能看到一些助记媒介产生的影响。下图是助记文章中每个用户回答的证实保留与每个问题的复习次数的散点图：
+尽管量子国度尚处于早期阶段，但我们已经能看到一些助记媒介产生的影响。下图是助记文章中每个用户回答的证实留存与每个问题的复习次数的散点图：
 
 ![Graph depicting exponentially-rising demonstranted retention](https://numinous.productions/ttft/assets/dem_retention-2x.png)
 
 The graph takes a little unpacking to explain. By a card’s “demonstrated retention” we mean the maximum time between a successful review of that card, and the prior review of that card. A little more concretely, consider repetition number 6, say (on the horizontal axis). At the point, a user has reviewed all 112 questions in the essay 6 times. And the vertical axis shows the total demonstrated retention, summed across all cards, with each blue dot representing a single user who has reached repetition 6.
 
-这张图需要稍微解释一下。图中纵轴的卡片「实证保留天数」是指正确回答该问题与上一次回答该问题之间的最长时间。具体来说，考虑一下横轴上的数字 6。在这一点上的用户都已经复习了文章中所有的 112 张卡片 6 次。纵轴显示的是所有卡片的证实留存天数，每个蓝点代表一个复习了 6 次的用户。
+这张图需要稍微解释一下。图中纵轴的卡片「证实留存天数」是指正确回答该问题与上一次回答该问题之间的最长时间。具体来说，考虑一下横轴上的数字 6。在这一点上的用户都已经复习了文章中所有的 112 张卡片 6 次。纵轴显示的是所有卡片的证实留存天数，每个蓝点代表一个复习了 6 次的用户。
 
 So, for instance, after 6 repetitions, we see from the graph that most users are up around 6,000 days of demonstrated retention. That means an average of about 6,000 / 112 ~ 54 days per question in the essay. Intuitively, that seems pretty good – if you’re anything like us, a couple of months after reading something you have only a hazy memory. By contrast, these users have, at low time cost to themselves (of which more below), achieved nearly two months of demonstrated retention across 112 detailed questions.
 
-因此，举例来说，经过 6 次复习，大多数用户的总实证留存天数达到了 6000 天左右。也就是说，平均一下，文章中的每个问题都保留了  54 天。直观来看这个效果很好——如果你只是和大多数人一样，那么在读过一些东西之后的几个月，你只能留有一个模糊的记忆。相比之下，这些用户以较低的时间成本（详见下文），在 112 个细节性问题上实现了近两个月的已证实留存。
+因此，举例来说，经过 6 次复习，大多数用户的总证实留存天数达到了 6000 天左右。也就是说，平均一下，文章中的每个问题都保留了 54 天。直观来看这个效果很好——如果你只是和大多数人一样，那么在读过一些东西之后的几个月，你只能留有一个模糊的记忆。相比之下，这些用户以较低的时间成本（详见下文），在 112 个细节性问题上实现了近两个月的已证实留存。
 
 Furthermore, you can see the exponential rise in retention with the number of times cards have been reviewed. After the first review, users typically have an average of just over 2 days of demonstrated retention, per card[^7]. But by the sixth review that rises to an average of 54 days of demonstrated retention. That typically takes about 95 minutes of total review time to achieve. Given that the essay takes about 4 or so hours to read, this suggests that a less than 50% overhead in time commitment can provide many months or years of retention for almost all the important details in the essay.
 
-此外，你可以看到保留天数随着卡片的复习次数呈指数上升。在第一次复习后，平均每张卡，用户通常都有超过 2 天的实证保留天数。[^7]但复习了 6 次之后，这个数字就上升到了54天。把所有卡片复习六次大约共需要85分钟，考虑到阅读这篇文章需要4个小时左右的时间，这就表明只需不到50%的时间投入可以把文章中几乎所有的重要细节记住几个月甚至几年。
+此外，你可以看到保留天数随着卡片的复习次数呈指数上升。在第一次复习后，平均每张卡，用户通常都有超过 2 天的实证保留天数。[^7]但复习了 6 次之后，这个数字就上升到了 54 天。把所有卡片复习六次大约共需要 85 分钟，考虑到阅读这篇文章需要4个小时左右的时间，这就表明只需不到50%的时间投入可以把文章中几乎所有的重要细节记住几个月甚至几年。
 
 This is the big, counterintuitive advantage of spaced repetition: you get exponential returns for increased effort. On average, every extra minute of effort spent in review provides more and more benefit. This is in sharp contrast with most experiences in life, where we run into diminishing returns. For instance, ordinarily if you increase the amount of time you spend reading by 50%, you expect to get no more than 50% extra out of it, and possibly much less. But with the mnemonic medium when you increase the amount of time you spend reading by 50%, you may get 10x as much out of it. Of course, we don’t quite mean those numbers literally. But it does convey the key idea of getting a strongly non-linear return. It’s a change in the quality of the medium.
 
@@ -137,7 +138,7 @@ This is the big, counterintuitive advantage of spaced repetition: you get expone
 
 This delayed benefit makes the mnemonic medium unusual in multiple ways. Another is this: most online media use short-term engagement models, using variations on operant conditioning to drive user behavior. This is done by Twitter, Facebook, Instagram, and many other popular media forms. The mnemonic medium is much more like meditation – in some ways, the anti-product, since it violates so much conventional Silicon Valley wisdom – in that the benefits are delayed, and hard to have any immediate sense of. Indeed, with the mnemonic medium, the greater the delay, the more the benefit.
 
-这种延迟回报让助记媒介在多个方面都不寻常。另一个不寻常的地方是，大多数社交软件使用短期交互的模式（short-term engagement models)，用一种类似条件反射的策略来驱使用户。Twitter、Facebook、Instagram和许多其他流行的社交软件都是这样做的。而助记媒介在某些方面更像冥想，是前面提到的那些产品的反面，因为助记媒介违反了许多硅谷的传统智慧——在这里好处是延迟的，而且很难有任何即时的获得感。事实上，对于助记媒介而言，延迟越大，受益越多。
+这种延迟回报让助记媒介在多个方面都不寻常。另一个不寻常的地方是，大多数社交软件使用短期交互的模式（short-term engagement models)，用一种类似条件反射的策略来驱使用户。Twitter、Facebook、Instagram 和许多其他流行的社交软件都是这样做的。而助记媒介在某些方面更像冥想，是前面提到的那些产品的反面，因为助记媒介违反了许多硅谷的传统智慧——在这里好处是延迟的，而且很难有任何即时的获得感。事实上，对于助记媒介而言，延迟越大，受益越多。
 
 These are preliminary results, and need more investigation. One naturally wonders what would happen if we’d been much more aggressive with the review schedule, setting the initial interval between reviews to (say) 2 months? If users reliably retained information up to that point, then the graph would start very high, and we wouldn’t see the exponential. We need to investigate these and many similar questions to better understand what’s going on with user’s memories.
 
@@ -149,7 +150,7 @@ Early feedback from users makes us cautiously optimistic that they’re finding 
 
 > I’ve only done your first quantum country course (so far) but I find it remarkable that I can view the proof and follow it, knowing what everything means. It’s almost like Neo in The Matrix telling Morpheus, ‘I know quantum computing’[^8].
 >
-> 到目前我只学完了量子国度上的第一个课程，但我惊奇的发现读着其中的证明，我跟得住，能知道其中每个部分的含义。这几乎就像黑客帝国里的Neo对Morpheus说「I know quantum computing」[^8].
+> 到目前我只学完了量子国度上的第一个课程，但我惊奇的发现读着其中的证明，我跟得住，能知道其中每个部分的含义。这几乎就像黑客帝国里的 Neo 对 Morpheus 说「I know quantum computing」[^8].
 
 A user with significantly more prior experience of quantum computing [wrote](https://news.ycombinator.com/item?id=19429035):
 
@@ -169,7 +170,7 @@ Another user, new to quantum computing, told us that *Quantum Country* “is by 
 
 Site analytics show a constant flow of people steadily working through the review sessions in the manner we intended. Six months after release of the prototype, 195 users had demonstrated one full month of retention on at least 80% of cards in the essay, demonstrating an extraordinary level of commitment to the process[^9]. We don’t yet have a good model of exactly what those people are learning, but it seems plausible they are taking away considerably more than from a conventional essay, or perhaps even from a conventional class.
 
-网站分析显示，有源源不断的人按照我们预期的方式持续稳定地完成复习周期。原型发布6个月后，195名用户对文章中至少80%的卡片都有整整一个月的证实留存天数，有力地证明了这一过程的有效性。[^9] 我们还没有一个比较好的模型来说明这些人到底学到了什么，但很可能相比从传统的文章，甚至是传统的课堂上，他们学到了更多的东西。
+网站分析显示，有源源不断的人按照我们预期的方式持续稳定地完成复习周期。原型发布 6 个月后，195 名用户对文章中至少 80% 的卡片都有整整一个月的证实留存天数，有力地证明了这一过程的有效性。[^9] 我们还没有一个比较好的模型来说明这些人到底学到了什么，但很可能相比从传统的文章，甚至是传统的课堂上，他们学到了更多的东西。
 
 Of course, this kind of feedback and these kinds of results should be taken with a grain of salt. The mnemonic medium is in its early days, has many deficiencies, and needs improvement in many ways (of which more soon). It is, however, encouraging to hear that some users already find the medium exceptionally helpful, and suggests developing and testing the medium further. At a minimum, it seems likely the mnemonic medium is genuinely helping people remember. And furthermore it has the exponentially increasing efficiency described above: the more people study, the more benefit they get per minute studied.
 
@@ -177,11 +178,11 @@ Of course, this kind of feedback and these kinds of results should be taken with
 
 In another informal experiment, we tried to figure out how much it affected user’s memories when they *weren’t* asked to review cards. To do this, we introduced a deliberate short (two-week) delay on reviews for a small subset of 8 cards. That is, some users would review those 8 cards upon an initial read, and then would be prevented from reviewing them again for at least two weeks. Other users would continue to study as normal on the 8 cards. By comparing the two groups we could estimate the effect that reviewing the cards had on user’s memories.
 
-在另一个非正式的实验中，我们试图弄清楚当用户没有复习卡片时，对他们的记忆有多大影响。为了做到这一点，我们特意对其中8张卡片进行了短暂（两周）的延迟复习。也就是说，一些用户在初次阅读时会复习这8张卡片，然后在至少两周内不会再复习。其他用户则继续正常地复习这8张卡片。通过比较这两组人，我们可以估计复习卡片对用户的记忆所产生的影响。
+在另一个非正式的实验中，我们试图弄清楚当用户没有复习卡片时，对他们的记忆有多大影响。为了做到这一点，我们特意对其中 8 张卡片进行了短暂（两周）的延迟复习。也就是说，一些用户在初次阅读时会复习这 8 张卡片，然后在至少两周内不会再复习。其他用户则继续正常地复习这8张卡片。通过比较这两组人，我们可以估计复习卡片对用户的记忆所产生的影响。
 
 What happened? Well, for those users whose reviews were delayed, accuracy dropped from 91% (upon the initial read) to 87% (after two weeks). This may seem a small drop, but keep in mind that users continued to review other cards, which almost certainly boosted their final performance, since those other cards had some overlap in content with the delayed cards. It’s difficult to avoid this kind of overlap without delaying reviews on all cards, a more drastic change in user experience than we wanted to impose. For users who were asked to review the cards as normal, accuracy improved from 89% to 96%. The short summary is: when users didn’t review the cards, accuracy dropped by 4%; when they did review the cards, accuracy increased by 7%[^10].
 
-发生了什么? 对于那些复习被推迟的用户来说，准确率从91%（初次阅读时）下降到87%（两周后）。似乎下降的不多，但别忘了，这些用户还在正常复习其他卡片。这些卡片的内容难免会与这8张卡片有所重叠，因此也一定提高他们的记忆表现。仅是推迟部分卡片的复习，这种效应是很难避免的，但全部推迟的话，对用户体验的影响就太大了。对于那些正常复习卡片的用户，准确率从 89% 提高到了96%。总结一下就是：用户不复习卡片的话，准确率就会下降 4%；如果他们按时复习卡片的话，准确率会提高7%。[^10]
+发生了什么? 对于那些复习被推迟的用户来说，准确率从 91% （初次阅读时）下降到 87% （两周后）。似乎下降的不多，但别忘了，这些用户还在正常复习其他卡片。这些卡片的内容难免会与这8张卡片有所重叠，因此也可能提高他们的记忆表现。仅是推迟部分卡片的复习，这种效应是很难避免的，但全部推迟的话，对用户体验的影响就太大了。对于那些正常复习卡片的用户，准确率从 89% 提高到了 96%。总结一下就是：用户不复习卡片的话，准确率就会下降 4%；如果他们按时复习卡片的话，准确率会提高 7%。[^10]
 
 Another way of looking at the data from this informal experiment is to ask which users saw improved or unchanged performance, and which saw their performance get worse. In fact, every single user (100%) who reviewed cards on the regular schedule saw their performance either stay the same or improve. By contrast, 40% of the users whose reviews were delayed saw their performance get worse, while 60% saw it stay the same or improve.
 
@@ -197,7 +198,7 @@ Despite these suggestive preliminary results, it’s still tempting to be dismis
 
 Before we delve deeper into the mnemonic medium, let’s mention one challenge in the discussion: the inherent difficulty in achieving a good balance between conveying enthusiasm and the kind of arm’s-length skepticism appropriate for evaluation. On the one hand, we would not have built the mnemonic medium if we weren’t excited about the underlying ideas, and wanted to develop those enthusiasms. To explain the mnemonic medium well, we need to bring you, the reader, inside that thinking. But having done that, we also need to step back and think more skeptically about questions such as: is this medium really working? What effect is it actually having on people? Can it be made 10x better? 100x better? Or, contrariwise, are there blockers that make this an irredeemably bad or at best mediocre idea? How important a role does memory play in cognition, anyway? So far, we’ve focused on the enthusiastic case for the medium, why one might consider this design at all. But later in this essay we’ll gradually step back and reflect in a more skeptical frame.
 
-在我们深入研究助记媒介之前，让我们提一下写文章过程中的一个挑战，即如何在适合安利的那种乐观和适合评估的那种独立的怀疑态度之间取得一个适当的平衡。一方面，要是连我们都不为助记媒介背后的那些想法感到兴奋并保持乐观，那我们就不可能开发出这种助记媒介。所以为了更好地介绍这种助记媒介，我们需要把你，也就是读者，带到这种思维里。但是在这样做之后，我们又需要退一步，批判性地去思考一些问题，比如：这种媒介真的有效吗? 它对人到底有什么影响? 能帮助人们 10 倍速地去记忆? 甚至是100 倍速？或者，反过来想，是否有一些障碍，说明出这是无可救药的坏主意，或者充其量只是一个平庸的想法？无论如何，记忆在认知中到底起着多么重要的作用? 到目前为止，我们已经关注了支持这种媒介的乐观想法，以及为什么人们会考虑这样设计这一媒介。但是在接下来的部分中，我们将逐渐从乐观中抽身，在一个更加批判性的框架中思考。
+在我们深入研究助记媒介之前，让我们提一下写文章过程中的一个挑战，即如何在适合安利的那种乐观和适合评估的那种独立的怀疑态度之间取得一个适当的平衡。一方面，要是连我们都不为助记媒介背后的那些想法感到兴奋并保持乐观，那我们就不可能开发出这种助记媒介。所以为了更好地介绍这种助记媒介，我们需要把你，也就是读者，带到这种思维里。但是在这样做之后，我们又需要退一步，批判性地去思考一些问题，比如：这种媒介真的有效吗? 它对人到底有什么影响? 能帮助人们 10 倍速地去记忆? 甚至是 100 倍速？或者，反过来想，是否有一些障碍，说明出这是无可救药的坏主意，或者充其量只是一个平庸的想法？无论如何，记忆在认知中到底起着多么重要的作用? 到目前为止，我们已经关注了支持这种媒介的乐观想法，以及为什么人们会考虑这样设计这一媒介。但是在接下来的部分中，我们将逐渐从乐观中抽身，在一个更加批判性的框架中思考。
 
 ## Expanding the scope of memory systems: what types of understanding can they be used for?
 
